evidence/runs/20260214-211311/raw/azure/nsg-rules-nsg-cui-pilot.json
[
  {
    "access": "Allow",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "3389",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"66ff2c2e-c0d7-456d-b5a5-12e0301d991b\"",
    "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/securityRules/default-allow-rdp",
    "name": "default-allow-rdp",
    "priority": 1000,
    "protocol": "TCP",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-cui-pilot-envclave",
    "sourceAddressPrefix": "*",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Allow",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "22",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"66ff2c2e-c0d7-456d-b5a5-12e0301d991b\"",
    "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/securityRules/allow-ssh-pilot",
    "name": "allow-ssh-pilot",
    "priority": 900,
    "protocol": "TCP",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-cui-pilot-envclave",
    "sourceAddressPrefix": "104.174.231.1",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Deny",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "3389",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"66ff2c2e-c0d7-456d-b5a5-12e0301d991b\"",
    "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/securityRules/Deny-RDP-From-Public-Codex",
    "name": "Deny-RDP-From-Public-Codex",
    "priority": 100,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-cui-pilot-envclave",
    "sourceAddressPrefix": "0.0.0.0/0",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  }
]
